MCADevOrg/src/objects/Loan_Balance__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Balance__c</fullName>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Daily_Payment__c</fullName>
        <label>Daily Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Funder__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Funder</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Loan Balances</relationshipLabel>
        <relationshipName>Loan_Balances</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LoanBalExternalId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>LoanBalExternalId</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Maturity_Date__c</fullName>
        <label>Maturity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Loan Balances</relationshipLabel>
        <relationshipName>Loan_Balances</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Payment_Frequency__c</fullName>
        <label>Payment Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Daily</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Twice a week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bi-Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Holdback %</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TestMultiselectpicklist__c</fullName>
        <label>TestMultiselectpicklist</label>
        <picklist>
            <picklistValues>
                <fullName>Abc,xyz</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Loan Balance</label>
    <nameField>
        <displayFormat>BAL-{00000}</displayFormat>
        <label>Loan Balance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan Balances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Test_Validation_Rule</fullName>
        <active>false</active>
        <errorConditionFormula>Maturity_Date__c = TODAY()</errorConditionFormula>
        <errorMessage>This is Test validation Message</errorMessage>
    </validationRules>
</CustomObject>